Update website via GitHub Actions - update for False-alarm rate affe9b75d6368911822d35102abd04734c16baab

--- a/dictionary_documentation.html
+++ b/dictionary_documentation.html
@@ -141,7 +141,7 @@ div.csl-indent {
    
   <ul class="collapse">
   <li><a href="#validity-data" id="toc-validity-data" class="nav-link active" data-scroll-target="#validity-data">Validity (data)</a></li>
-  <li><a href="#ability-to-continue-tracking-an-event" id="toc-ability-to-continue-tracking-an-event" class="nav-link" data-scroll-target="#ability-to-continue-tracking-an-event">Ability to continue tracking an event</a></li>
+  <li><a href="#b" id="toc-b" class="nav-link" data-scroll-target="#b">b</a></li>
   <li><a href="#acceptability" id="toc-acceptability" class="nav-link" data-scroll-target="#acceptability">Acceptability</a></li>
   <li><a href="#acceptability-and-engagement" id="toc-acceptability-and-engagement" class="nav-link" data-scroll-target="#acceptability-and-engagement">Acceptability and engagement</a></li>
   <li><a href="#accessibility-data" id="toc-accessibility-data" class="nav-link" data-scroll-target="#accessibility-data">Accessibility (data)</a></li>
@@ -274,8 +274,8 @@ div.csl-indent {
 </ul>
 <hr>
 </section>
-<section id="ability-to-continue-tracking-an-event" class="level2">
-<h2 class="anchored" data-anchor-id="ability-to-continue-tracking-an-event">Ability to continue tracking an event</h2>
+<section id="b" class="level2">
+<h2 class="anchored" data-anchor-id="b">b</h2>
 <p><strong>ID:</strong> abilityToContinueTrackingAnEvent <strong>See also:</strong> N/A</p>
 <p><strong>Definition</strong> The ability of the surveillance system to continue tracking an event throughout the event life cycle.</p>
 <p><strong>Description</strong> An event-based biosurveillance may be quite successful in detecting or forecasting an outbreak of disease, but it may lose its sensitivity as the event progresses (e.g., due to a high background level of indicators following a media announcement).</p>
@@ -791,13 +791,13 @@ In more recent years, data quality includes the concept of fit-for-purpose, with
 <section id="false-alarm-rate" class="level2">
 <h2 class="anchored" data-anchor-id="false-alarm-rate">False-alarm rate</h2>
 <p><strong>ID:</strong> falseAlarmRate <strong>See also:</strong> <a href="#specificity">specificity</a></p>
-<p><strong>Definition</strong> The proportion of negative events (e.g.&nbsp;non-outbreak periods) incorrectly classified as events (outbreaks).</p>
-<p><strong>Description</strong> The false-alarm rate is the proportion of non-events incorrectly flagged as events, and is the inverse of specificity. While some false positives are expected, a high rate can lead to wasted resources, meanwhile a low rate may indicate poor sensitivity, risking missed outbreaks. Therefore, the proportion of false alarms (i.e., false positives) should be balanced with sensitivity, and assessed with respect to overall sensitivity.This term is positively correlated with sensitivity and cost and should be evaluated alongside overall specificity.</p>
-<p><strong>Background</strong> TBD</p>
+<p><strong>Definition</strong> The proportion of negative events (e.g.&nbsp;non-outbreak periods) incorrectly classified as events (outbreaks) <span class="citation" data-cites="Hoinville_Pvm_2013 Peyre_Pvm_2019">(<a href="#ref-Hoinville_Pvm_2013" role="doc-biblioref">2</a>,<a href="#ref-Peyre_Pvm_2019" role="doc-biblioref">3</a>)</span>.</p>
+<p><strong>Description</strong> The false-alarm rate is the proportion of non-events incorrectly flagged as events and represents the inverse of specificity <span class="citation" data-cites="Drewe_TED_2015 Hoinville_Pvm_2013 Peyre_Pvm_2019">(<a href="#ref-Hoinville_Pvm_2013" role="doc-biblioref">2</a>–<a href="#ref-Drewe_TED_2015" role="doc-biblioref">4</a>)</span>. While some false positives are expected in surveillance systems, a high false-alarm rate can lead to wasted resources through misdirected investigations of non-events <span class="citation" data-cites="anonymous.2001 Buehler_EOPHS_2004 Groseclose_EOSH_2008">(<a href="#ref-anonymous.2001" role="doc-biblioref"><strong>anonymous.2001?</strong></a>,<a href="#ref-Buehler_EOPHS_2004" role="doc-biblioref"><strong>Buehler_EOPHS_2004?</strong></a>,<a href="#ref-Groseclose_EOSH_2008" role="doc-biblioref"><strong>Groseclose_EOSH_2008?</strong></a>)</span>. Conversely, efforts to minimize false alarms by raising detection thresholds may compromise sensitivity, increasing the risk of missed outbreaks <span class="citation" data-cites="Buehler_EOPHS_2004 Groseclose_SSEDSHD_2013">(<a href="#ref-Buehler_EOPHS_2004" role="doc-biblioref"><strong>Buehler_EOPHS_2004?</strong></a>,<a href="#ref-Groseclose_SSEDSHD_2013" role="doc-biblioref"><strong>Groseclose_SSEDSHD_2013?</strong></a>)</span>. This trade-off is particularly critical in early detection and syndromic surveillance systems, where high data volumes and low event prevalence often generate elevated false-positive rates <span class="citation" data-cites="Groseclose_SSEDSHD_2013">(<a href="#ref-Groseclose_SSEDSHD_2013" role="doc-biblioref"><strong>Groseclose_SSEDSHD_2013?</strong></a>)</span>. Excessive false alerts can lead to alert fatigue among users, potentially causing genuine events to be missed, and may erode credibility of public health agencies <span class="citation" data-cites="Lucero-Obusan_BMC_2022 Groseclose_SSEDSHD_2013">(<a href="#ref-Lucero-Obusan_BMC_2022" role="doc-biblioref"><strong>Lucero-Obusan_BMC_2022?</strong></a>,<a href="#ref-Groseclose_SSEDSHD_2013" role="doc-biblioref"><strong>Groseclose_SSEDSHD_2013?</strong></a>)</span>. System designers should specify desired sensitivity and false-alarm rate thresholds, explicitly balancing the risk of missed outbreaks against the cost of investigating false alarms <span class="citation" data-cites="Buehler_EOPHS_2004">(<a href="#ref-Buehler_EOPHS_2004" role="doc-biblioref"><strong>Buehler_EOPHS_2004?</strong></a>)</span>. The false-alarm rate is closely related to predictive value positive (PVP), as a low PVP directly reflects a high false-alarm rate; both metrics quantify the quality of positive signals in a surveillance system <span class="citation" data-cites="Buehler_EOPHS_2004 anonymous.2001">(<a href="#ref-Buehler_EOPHS_2004" role="doc-biblioref"><strong>Buehler_EOPHS_2004?</strong></a>,<a href="#ref-anonymous.2001" role="doc-biblioref"><strong>anonymous.2001?</strong></a>)</span>.</p>
+<p><strong>Background</strong> The term "false-alarm rate" was proposed and adopted in animal health surveillance evaluation frameworks as an alternative to "specificity" because it was considered more easily understood by non-epidemiologists, including surveillance planners and policy makers <span class="citation" data-cites="Hoinville_Pvm_2013 Peyre_Pvm_2019">(<a href="#ref-Hoinville_Pvm_2013" role="doc-biblioref">2</a>,<a href="#ref-Peyre_Pvm_2019" role="doc-biblioref">3</a>)</span>. The concept gained prominence as a key metric within the Evidence Quality or Effectiveness domain of surveillance evaluation frameworks, particularly for systems designed to detect early outbreaks or unexpected events <span class="citation" data-cites="icahs-workshop-report Peyre_Pvm_2019">(<a href="#ref-Peyre_Pvm_2019" role="doc-biblioref">3</a>,<a href="#ref-icahs-workshop-report" role="doc-biblioref"><strong>icahs-workshop-report?</strong></a>)</span>. In biosurveillance and outbreak detection systems, quantifying the false-alarm rate has been identified as essential for economic evaluations, with stakeholders demonstrating willingness-to-pay for improvements in this attribute <span class="citation" data-cites="delRioVilas_PfEoOHSTEB_2022 Amato_EPI_2023">(<a href="#ref-delRioVilas_PfEoOHSTEB_2022" role="doc-biblioref"><strong>delRioVilas_PfEoOHSTEB_2022?</strong></a>,<a href="#ref-Amato_EPI_2023" role="doc-biblioref"><strong>Amato_EPI_2023?</strong></a>)</span>.</p>
 <p><strong>Synonyms</strong></p>
 <ul>
-<li><strong>Exact:</strong> N/A</li>
-<li><strong>Broad:</strong> N/A</li>
+<li><strong>Exact:</strong> Inverse of specificity, False positive rate (FPR)</li>
+<li><strong>Broad:</strong> Predictive value positive (PVP) - related inverse concept; low PVP indicates high false-alarm rate</li>
 </ul>
 <hr>
 </section>
@@ -1529,6 +1529,15 @@ In more recent years, data quality includes the concept of fit-for-purpose, with
 <div id="refs" class="references csl-bib-body" role="list">
 <div id="ref-Peyre_PrinciplesEvaluationOne_2022" class="csl-entry" role="listitem">
 <div class="csl-left-margin">1. </div><div class="csl-right-inline">Peyre M, Roger F, Goutard F, editors. Principles for <span>Evaluation</span> of <span>One Health Surveillance</span>: <span>The EVA Book</span> [Internet]. Cham: Springer International Publishing; 2022 [cited 2023 Apr 21]. Available from: <a href="https://link.springer.com/10.1007/978-3-030-82727-4">https://link.springer.com/10.1007/978-3-030-82727-4</a></div>
+</div>
+<div id="ref-Hoinville_Pvm_2013" class="csl-entry" role="listitem">
+<div class="csl-left-margin">2. </div><div class="csl-right-inline">Hoinville LJ, Alban L, Drewe JA, Gibbens JC, Gustafson L, Hasler B, et al. <a href="https://doi.org/10.1016/j.prevetmed.2013.06.006">Proposed terms and concepts for describing and evaluating animal-health surveillance systems.</a> Preventive veterinary medicine. 2013;112(1-2):1–12. </div>
+</div>
+<div id="ref-Peyre_Pvm_2019" class="csl-entry" role="listitem">
+<div class="csl-left-margin">3. </div><div class="csl-right-inline">Peyre M, Hoinville L, Njoroge J, Cameron A, Traon D, Goutard F, et al. <a href="https://doi.org/10.1016/j.prevetmed.2019.104777">The <span>RISKSUR EVA</span> tool (<span>Survtool</span>): <span>A</span> tool for the integrated evaluation of animal health surveillance systems.</a> Preventive veterinary medicine. 2019;173(cwt, 8217463):104777. </div>
+</div>
+<div id="ref-Drewe_TED_2015" class="csl-entry" role="listitem">
+<div class="csl-left-margin">4. </div><div class="csl-right-inline">Drewe JA, Hoinville LJ, Cook AJC, Floyd T, Gunn G, Stärk KDC. <span>SERVAL</span>: <span>A New Framework</span> for the <span>Evaluation</span> of <span>Animal Health Surveillance</span>. Transbound Emerg Dis [Internet]. 2015 Feb [cited 2025 May 12];62(1):33–45. Available from: <a href="https://onlinelibrary.wiley.com/doi/10.1111/tbed.12063">https://onlinelibrary.wiley.com/doi/10.1111/tbed.12063</a></div>
 </div>
 </div>
 
