Update website via GitHub Actions - Update with efficiency 7de080c12989741019be5b9b0fa8ac115bea2278

--- a/dictionary_documentation.html
+++ b/dictionary_documentation.html
@@ -752,7 +752,7 @@ In more recent years, data quality includes the concept of fit-for-purpose, with
 <section id="efficiency" class="level2">
 <h2 class="anchored" data-anchor-id="efficiency">Efficiency</h2>
 <p><strong>ID:</strong> efficiency <strong>See also:</strong> N/A</p>
-<p><strong>Definition</strong> The link between the resources implemented and the results obtained.</p>
+<p><strong>Definition</strong> The relationship between resources used and results obtained, whereby an efficient system accomplishes objectives with minimum expenditure of time, human effort, and cost <span class="citation" data-cites="Drewe_EoAaPHS_2012 Hoinville_TRVA_2013">(<a href="#ref-Drewe_EoAaPHS_2012" role="doc-biblioref"><strong>Drewe_EoAaPHS_2012?</strong></a>,<a href="#ref-Hoinville_TRVA_2013" role="doc-biblioref"><strong>Hoinville_TRVA_2013?</strong></a>)</span>.</p>
 <p><strong>Description</strong> An efficient system will accomplish a job with minimum expenditure of time, human effort and cost. Conducting surveillance incurs costs such as salaries, consumables, and travel. These costs can be compared against the outputs from surveillance such as reports, disease or organism detections and notifications, or other signals. A surveillance system can be considered efficient if there is an optimal balance between economic investments and its outputs, the latter achieving the desired quality attributes (e.g.&nbsp;precision, timeliness). Risk-based surveillance can - where appropriate in terms of the surveillance objective - provide efficiency gains in surveillance systems.</p>
 <p><strong>Background</strong> TBD</p>
 <p><strong>Synonyms</strong></p>
