--- a/figures.html
+++ b/figures.html
@@ -3829,8 +3829,144 @@ vertical-align: -.125em;
 <style>html{ scroll-behavior: smooth; }</style>
 
 
-<style type="text/css">h2, h3 { scroll-margin-top: 6rem; }
-hr { margin: 2rem 0; }
+<style type="text/css">
+
+h2, h3 {
+scroll-margin-top: 6rem;
+}
+
+hr {
+display: block;
+height: 0;
+border: 0;
+border-top: 6px solid #374151;
+margin: 0.75rem -2rem; 
+padding: 0;
+}
+
+hr.intro-separator {
+margin-top: 1rem !important;
+margin-bottom: 1rem !important;
+margin-left: -3rem !important;
+margin-right: -3rem !important;
+}
+
+hr.term-separator {
+margin-top: 0.5rem !important;
+margin-bottom: 0.75rem !important;
+margin-left: -2rem !important;
+margin-right: -2rem !important;
+}
+
+hr.header-separator {
+margin-top: 0.5rem !important;
+margin-bottom: 0.75rem !important;
+margin-left: -2rem !important;
+margin-right: -2rem !important;
+}
+
+#quarto-margin-sidebar {
+margin-left: 3rem !important;
+width: 300px !important;
+}
+
+main.content {
+max-width: 750px; 
+margin-left: auto !important; 
+margin-right: 0rem !important; 
+}
+
+section.level2 {
+margin-bottom: 0;
+padding: 0;
+page-break-inside: avoid;
+border-bottom: none;
+}
+
+section.level2 > h2 {
+color: #1f2937 !important;
+font-weight: 700 !important;
+font-size: 1.5em !important;
+margin-top: 0 !important;
+margin-bottom: 0.4rem !important;
+padding-bottom: 0 !important;
+border-bottom: none !important;
+letter-spacing: 0.02em !important;
+text-transform: uppercase !important;
+}
+
+section.level2 > p:first-of-type {
+font-family: 'Monaco', 'Courier New', monospace;
+font-size: 0.75rem;
+color: #6b7280;
+background-color: #f3f4f6;
+padding: 0.25rem 0.6rem;
+margin-top: 0.5rem;
+margin-bottom: 0;
+border-left: 2px solid #9ca3af;
+display: inline-block;
+}
+
+section.level2 > p:nth-of-type(2),
+section.level2 > p:nth-of-type(3) {
+margin: 0.5rem 0;
+font-size: 0.9rem;
+color: #374151;
+}
+
+section.level2 > p {
+line-height: 1.5;
+margin-bottom: 0.65rem;
+color: #1f2937;
+text-align: justify;
+}
+
+section.level2 > p:last-of-type {
+margin-bottom: 8rem;
+}
+
+section.level2 p strong:first-child {
+font-weight: 600;
+color: #374151;
+}
+
+section.level2 p:has(strong:contains("Synonyms")) {
+color: #4b5563;
+}
+
+a[href^="#"] {
+color: #1d4ed8;
+text-decoration: none;
+font-weight: 500;
+}
+a[href^="#"]:hover {
+text-decoration: underline;
+}
+
+#TOC {
+background-color: #f9fafb;
+padding: 1rem 1.25rem;
+border-left: 1px solid #d1d5db;
+
+overflow-y: visible; 
+}
+#TOC ul {
+line-height: 1.3; 
+padding-left: 0.2rem; 
+}
+#TOC a {
+color: #4b5563;
+text-decoration: none;
+transition: color 0.15s;
+font-size: 0.85rem; 
+}
+#TOC a:hover {
+color: #111827;
+}
+#TOC a.active {
+color: #111827;
+font-weight: 600;
+}
 </style>
 </head>
 
